@@ -1,19 +1,26 @@
 package com.example.synergybackend.controller;
 
+import ch.qos.logback.core.net.SyslogOutputStream;
 import com.example.synergybackend.model.Choice;
 import com.example.synergybackend.model.Mcq;
 import com.example.synergybackend.repository.MCQRepository;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
-
-import java.util.*;
-
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+
 
 @ExtendWith(MockitoExtension.class)
 class McqControllerTest {
@@ -24,6 +31,7 @@ class McqControllerTest {
     @InjectMocks
     private McqController mcqControllerUnderTest;
 
+
     @Test
     void testGetAllMcq() {
         // Setup
@@ -33,14 +41,16 @@ class McqControllerTest {
         mcq.setGoogleId("googleId");
         mcq.setId("id");
         mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-        final List<Mcq> mcqs = Arrays.asList(mcq);
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        final List<Mcq> mcqs = List.of(mcq);
         when(mockMcqRepo.findAll()).thenReturn(mcqs);
-
+        System.out.println(mcq);
         // Run the test
         final List<Mcq> result = mcqControllerUnderTest.getAllMcq();
 
         // Verify the results
+        for(Mcq i :result)
+            System.out.println(i);
     }
 
     @Test
@@ -52,6 +62,7 @@ class McqControllerTest {
         final List<Mcq> result = mcqControllerUnderTest.getAllMcq();
 
         // Verify the results
+        System.out.println(result);
     }
 
     @Test
@@ -59,29 +70,22 @@ class McqControllerTest {
         // Setup
 
         // Configure MCQRepository.findById(...).
+        MockitoAnnotations.openMocks(this);
         final Mcq mcq1 = new Mcq();
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
+        mockMcqRepo.save(any(Mcq.class));
+
+
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.getMcqById("id");
+        System.out.println(result);
 
-        // Verify the results
-    }
-
-    @Test
-    void testGetMcqById_MCQRepositoryReturnsAbsent() {
-        // Setup
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.getMcqById("id");
-
-        // Verify the results
     }
 
     @Test
@@ -91,21 +95,21 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
         // Configure MCQRepository.save(...).
         final Mcq mcq = new Mcq();
         mcq.setGoogleId("googleId");
         mcq.setId("id");
         mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final String result = mcqControllerUnderTest.saveMcq(quest);
-
+        System.out.println(result);
         // Verify the results
-        assertEquals("result", result);
+        assertEquals("MCQ/id", result);
     }
 
     @Test
@@ -115,14 +119,14 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 2))));
 
         // Configure MCQRepository.findById(...).
         final Mcq mcq1 = new Mcq();
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
 
@@ -131,36 +135,14 @@ class McqControllerTest {
         mcq2.setGoogleId("googleId");
         mcq2.setId("id");
         mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateMcq("id", quest);
-
-        // Verify the results
-    }
-
-    @Test
-    void testUpdateMcq_MCQRepositoryFindByIdReturnsAbsent() {
-        // Setup
-        final Mcq quest = new Mcq();
-        quest.setGoogleId("googleId");
-        quest.setId("id");
-        quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.updateMcq("id", quest);
+        ArrayList<Choice> c=result.getChoices();
+        for(Choice i:c)
+            System.out.println(i.getVotes());
 
         // Verify the results
     }
@@ -172,14 +154,14 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
         // Configure MCQRepository.save(...).
         final Mcq mcq = new Mcq();
         mcq.setGoogleId("googleId");
         mcq.setId("id");
         mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
@@ -196,14 +178,14 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
         // Configure MCQRepository.findById(...).
         final Mcq mcq1 = new Mcq();
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
 
@@ -212,33 +194,8 @@ class McqControllerTest {
         mcq2.setGoogleId("googleId");
         mcq2.setId("id");
         mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.updateSC("id", quest);
-
-        // Verify the results
-    }
-
-    @Test
-    void testUpdateSC_MCQRepositoryFindByIdReturnsAbsent() {
-        // Setup
-        final Mcq quest = new Mcq();
-        quest.setGoogleId("googleId");
-        quest.setId("id");
-        quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateSC("id", quest);
@@ -255,20 +212,9 @@ class McqControllerTest {
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.getSC("id");
-
-        // Verify the results
-    }
-
-    @Test
-    void testGetSC_MCQRepositoryReturnsAbsent() {
-        // Setup
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.getSC("id");
@@ -283,21 +229,21 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
         // Configure MCQRepository.save(...).
         final Mcq mcq = new Mcq();
         mcq.setGoogleId("googleId");
         mcq.setId("id");
         mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final String result = mcqControllerUnderTest.saveRT(quest);
 
         // Verify the results
-        assertEquals("result", result);
+        assertEquals("RT/id", result);
     }
 
     @Test
@@ -307,14 +253,14 @@ class McqControllerTest {
         quest.setGoogleId("googleId");
         quest.setId("id");
         quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        quest.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
 
         // Configure MCQRepository.findById(...).
         final Mcq mcq1 = new Mcq();
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
 
@@ -323,33 +269,8 @@ class McqControllerTest {
         mcq2.setGoogleId("googleId");
         mcq2.setId("id");
         mcq2.setQuestion("question");
-        mcq2.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq2.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq2);
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.updateRT("id", quest);
-
-        // Verify the results
-    }
-
-    @Test
-    void testUpdateRT_MCQRepositoryFindByIdReturnsAbsent() {
-        // Setup
-        final Mcq quest = new Mcq();
-        quest.setGoogleId("googleId");
-        quest.setId("id");
-        quest.setQuestion("question");
-        quest.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
-
-        // Configure MCQRepository.save(...).
-        final Mcq mcq = new Mcq();
-        mcq.setGoogleId("googleId");
-        mcq.setId("id");
-        mcq.setQuestion("question");
-        mcq.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
-        when(mockMcqRepo.save(any(Mcq.class))).thenReturn(mcq);
 
         // Run the test
         final Mcq result = mcqControllerUnderTest.updateRT("id", quest);
@@ -366,7 +287,7 @@ class McqControllerTest {
         mcq1.setGoogleId("googleId");
         mcq1.setId("id");
         mcq1.setQuestion("question");
-        mcq1.setChoices(new ArrayList<>(Arrays.asList(new Choice("option", 0))));
+        mcq1.setChoices(new ArrayList<>(List.of(new Choice("option", 0))));
         final Optional<Mcq> mcq = Optional.of(mcq1);
         when(mockMcqRepo.findById("id")).thenReturn(mcq);
 
@@ -376,14 +297,4 @@ class McqControllerTest {
         // Verify the results
     }
 
-    @Test
-    void testGetRT_MCQRepositoryReturnsAbsent() {
-        // Setup
-        when(mockMcqRepo.findById("id")).thenReturn(Optional.empty());
-
-        // Run the test
-        final Mcq result = mcqControllerUnderTest.getRT("id");
-
-        // Verify the results
-    }
 }
